--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         </div>
 
         <div class="main">
-            <div style="width: 100%; height: 400px; display: flex; justify-content: center;">
-              <img src="./main.png" min-height="380px" max-width="480px">
+            <div style="display: flex; justify-content: center;">
+              <img src="./main.png" height="380px" width="480px">
             </div>
             <div style="min-width: 50%; text-align: center;">
               <h2 style="margin-top: 35px; color: rgb(92, 43, 226);">Learn new skills.<br>Stay in demand.</h2>
@@ -22,8 +22,8 @@
 
         <div class="about" style="margin-top: 35px;">
             <h1 style="text-align: center; color: rgb(92, 43, 226);"><u>About us</u></h1>
-            <div style="width: 100%; height: 400px; display: flex; justify-content: center;">
-                <img src="./about.png" min-height="380px" max-width="480px">
+            <div style="display: flex; justify-content: center;">
+                <img src="./about.png" height="380px" width="480px">
             </div>
                 <p style="text-align: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt rerum soluta provident illum placeat iure et impedit at distinctio!<br>Quia ea sunt ipsam illo animi iure doloremque quis vitae sit. Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br>Enim repudiandae rem debitis deserunt ipsam, fuga maiores voluptate recusandae obcaecati labore quidem nisi ea quo sed<br>quod consequuntur cumque accusamus sequi?</p>
         </div>
@@ -31,7 +31,7 @@
         <div class="pricing" style="margin-top: 35px;">
             <h1 style="text-align: center; color: rgb(92, 43, 226);"><u>Pricing</u></h1>
             <div style="display: flex; justify-content: space-evenly; flex-wrap: wrap;">
-                <div style="flex-direction: column; border: 2px dashed black; height: 270px; max-width: 275px;">
+                <div style="flex-direction: column; border: 2px dashed black; min-height: 280px; min-width: 285px;">
                     <h2>Basic</h2>
                     <ul>
                         <li>Limited content</li>
@@ -41,7 +41,7 @@
                     </ul>
                     <button><h3>Buy now</h3></button>
                 </div>
-                <div style="flex-direction: column; border: 2px dashed black; height: 270px; max-width: 275px;">
+                <div style="flex-direction: column; border: 2px dashed black; min-height: 280px; min-width: 285px;">
                     <h2>Pro</h2>
                     <ul>
                         <li>Full content access</li>
