--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Website using pure html</title>
     </head>
-    <body style="margin: 0; padding: 0; overflow-x: hidden;">
+    <body style="margin: 0; padding: 0; overflow-x: hidden; box-sizing: border-box;">
 
         <div class="header">
             <h1 style="text-align: center; color: rgb(92, 43, 226);">Company</h1>
