--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <div class="main">
             <div style="display: flex; justify-content: center;">
-              <img src="./main.png" height="380px" width="480px">
+              <img src="./main.png" height="auto" width="100%" style="max-width: 480px;">
             </div>
             <div style="min-width: 50%; text-align: center;">
               <h2 style="margin-top: 35px; color: rgb(92, 43, 226);">Learn new skills.<br>Stay in demand.</h2>
@@ -23,7 +23,7 @@
         <div class="about" style="margin-top: 35px;">
             <h1 style="text-align: center; color: rgb(92, 43, 226);"><u>About us</u></h1>
             <div style="display: flex; justify-content: center;">
-                <img src="./about.png" height="380px" width="480px">
+                <img src="./about.png" height="auto" width="100%" style="max-width: 480px;">
             </div>
                 <p style="text-align: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt rerum soluta provident illum placeat iure et impedit at distinctio!<br>Quia ea sunt ipsam illo animi iure doloremque quis vitae sit. Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br>Enim repudiandae rem debitis deserunt ipsam, fuga maiores voluptate recusandae obcaecati labore quidem nisi ea quo sed<br>quod consequuntur cumque accusamus sequi?</p>
         </div>
