--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Website using pure html</title>
     </head>
     <body style="margin: 0; padding: 0; overflow-x: hidden; box-sizing: border-box;">
