--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div style="min-width: 50%; text-align: center;">
               <h2 style="margin-top: 35px; color: rgb(92, 43, 226);">Learn new skills.<br>Stay in demand.</h2>
-              <p>Company is a new-age tech school where you can master<br>skills that are in-demand today<br>(and will be tomorrow).</p>
+              <p style="font-size: 25px;">Company is a new-age tech school where you can master<br>skills that are in-demand today<br>(and will be tomorrow).</p>
             </div>
         </div>
 
@@ -26,7 +26,7 @@
             <div style="display: flex; justify-content: center;">
                 <img src="./about.png" height="auto" width="100%" style="max-width: 480px;">
             </div>
-                <p style="text-align: center;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt rerum soluta provident illum placeat iure et impedit at distinctio!<br>Quia ea sunt ipsam illo animi iure doloremque quis vitae sit. Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br>Enim repudiandae rem debitis deserunt ipsam, fuga maiores voluptate recusandae obcaecati labore quidem nisi ea quo sed<br>quod consequuntur cumque accusamus sequi?</p>
+                <p style="text-align: center; font-size: 25px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt rerum soluta provident illum placeat iure et impedit at distinctio!<br>Quia ea sunt ipsam illo animi iure doloremque quis vitae sit. Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br>Enim repudiandae rem debitis deserunt ipsam, fuga maiores voluptate recusandae obcaecati labore quidem nisi ea quo sed<br>quod consequuntur cumque accusamus sequi?</p>
         </div>
 
         <div class="pricing" style="margin-top: 35px;">
